--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,11 +6,17 @@ click==7.1.2
 click-didyoumean==0.0.3
 click-repl==0.1.6
 Django==3.1.2
-djangorestframework==3.12.1
+djangorestframework==3.11.0
+drf-yasg==1.17.1
+flake8==3.8.1
+flake8-builtins==1.5.3
+flake8-print==3.1.4
 kombu==5.0.2
 Markdown==3.3.2
 prompt-toolkit==3.0.8
 psycopg2-binary==2.8.6
+pytest===6.1.1
+pytest-django==3.9.0
 pytz==2020.1
 six==1.15.0
 sqlparse==0.4.1
