refactor, makefile, tests replace, comission from settings

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 DEBUG=1
 SECRET_KEY=4)^t9ny6qvzdm+y026*jva&ej8kr*!l0trvfi2q=-0*n-@!h+x
 DJANGO_ALLOWED_HOSTS=*
-POSTGRES_DATABASE=django_template
-POSTGRES_USER=django
-POSTGRES_PASSWORD=django
+POSTGRES_DB=transferer_db
+POSTGRES_USER=transferer
+POSTGRES_PASSWORD=egb&^g344g*G&Bgbergw
 POSTGRES_HOST=postgresql
 POSTGRES_PORT=5432
 WSGI_PORT=8000
